assets/style.css
body {
  max-width: 1310px;
  margin: auto;
  position: relative;
}

main {
  margin-left: 35px;
}

a {
  color: #000;
}

p {
  line-height: 1;
}

.header-container {
  position: static;
  background-color: #F72210;
  height: 80px;
  margin: auto;
}

li {
  list-style: none;
}

.text-size-19 {
  font-size: 19px;
}

.text-size-18 {
  font-size: 18px;
}

.text-size-15 {
  font-size: 15px;
}

.link-size-19 a {
  font-size: 19px;
}

.link-size-22 a{
  font-size: 22px;
}

.link-size-24 a{
  font-size: 24px;
}

.link-size-16 a {
  font-size: 16px;
}

.link-size-17 a {
  font-size: 17px;
}

.link-size-18 a{
  font-size: 18px;
}

.contain-logo {
  width: 396px;
  height: 60px;
}

.main-logo {
  fill: white;
}

.subscribe-login {
  align-self: end !important;
}

.subscribe {
  border-radius: 24px;
}

.header-deco::before {
  content: " ";
  position: absolute;
  top: 80px;
  left: 95%;
  width: 5%;
  background-color: #F72210;
  border-left: 12px solid white;
  border-top: 12px solid #F72210;
}

.header-list {
  margin-right: 5%;
  padding: 0;
}

.header-list a {
  color: black;
}

.header-list a:hover {
  color: #F72210;
  cursor: pointer;
  text-decoration: none;
}

.trending-list {
  margin-right: 5%;
}

.trending-list a {
  color: #807F84;
}

.trending-list a:hover {
  color: #F72210;
  cursor: pointer;
  text-decoration: none;
}

.gray-text {
  color: #A0A0A0;
}

.gray-text:hover {
  color: #A0A0A0;
}

h2 {
  font-size: 16px;
  font-family: 'roboto', Arial, Helvetica, sans-serif;
}

.hover-red:hover {
  color: #000;
  text-decoration: underline;
  text-decoration-color: #f72210;
}

.more-stories img  {
    height: 95px;
    width: 95px;
    object-fit: cover;
    object-position: center center;
}

.latest-news img  {
  height: 95px;
  width: 95px;
  object-fit: cover;
  object-position: center center;
}

.text-decoration-none a {
  text-decoration: none;
}

.border-news {
  border-bottom: 1px solid #DDDDDD;
}

.fs-hover a:hover {
  color: #F72210;
  cursor: pointer;
  text-decoration: none;
}

.line-height-1 {
  line-height: 1;
}

.border-debate {
  border-top: 5px solid #D9D9D9;
  border-bottom: 5px solid #D9D9D9;
}

.round-image {
  width: 60px;
  border-radius: 50%;
}

.vs-border {
  height: 1px;
  border: 3px double #D9D9D9;
}

.vs {
position: relative;
top: 50%;
left: 50%;
background-color: #000;
color: white;
border-radius: 50%;
width: 32px;
height: 32px;
text-align: center;
font-size: 14px;
transform: translate(-50%, -50%);
}

.icon-n {
  -webkit-flex: none;
  flex: none;
  display: block;
  width: 29px;
  height: 28px;
  background: url(https://g.newsweek.com/www/images/logo-n1.svg) center/contain no-repeat #f72210;
  margin-right: 5px;
}

.signup-form {
  max-width: 300px;
  margin: auto;
}

.more-stories2 img  {
  object-fit: cover;
  object-position: center center;
}

.adjust-image img {
  min-height: 290px;
  max-height: 450px;
  object-fit: cover;
  object-position: top center;
}

.special-image img {
  max-height: 100vh;
}

@media only screen and (max-width: 991px) {

  main {
    margin: auto;
  }
  
  .header-container {
    height: 45px;
  }

  .contain-logo {
    width: 132px;
    height: 20px;
  }

  .subscribe-login {
    align-self: center !important;
  }

}

